# Proxy_Finder

./: .gitignore  Main.py  README.md  __main__.py  cli.py  database_creation.py  database_manager.py  gui.py  pyproject.toml  sample_settings.py  tasks.py
Scrapper/: Main.py  __init__.py  celery.py  database_creation.py  database_manager.py  sample_settings.py  scrapper.py  tasks.py
redis/: dump.rdb
scripts/: run_beat.py  run_celery.py
tests/: tasks_tests.py
