[tool.poetry]
name = "proxyfinder"
version = "0.1.0"
description = ""
authors = ["MadnessCod <147450756+MadnessCod@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
colorama = "^0.4.6"
urllib3 = "^2.2.2"
httpx = "^0.27.0"
pysocks = "^1.7.1"
fake-useragent = "^1.5.1"
peewee = "^3.17.6"
psycopg2-binary = "^2.9.9"
celery = {extras = ["beat", "redis"], version = "^5.4.0"}
flower = "^2.0.1"
eventlet = "^0.36.1"
black = "^24.4.2"
kivy = "^2.3.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
